publishing app changes

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+/android/gradle.properties
+android/gradle.properties
 
 # node.js
 #
@@ -72,3 +74,5 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+
